2006-08-26  Matthias Clasen  <mclasen@redhat.com>

	* gobject.c: Remove ; after G_DEFINE_TYPE.  (#351741, Kjartan Maraas)

Wed Aug 23 10:35:32 2006  Tim Janik  <timj@gtk.org>

	* gobject.[hc]: changed return value of g_value_dup_object(), fixes #343292.

2006-08-23  Sven Neumann  <sven@gimp.org>

	* gobject/glib-genmarshal.[c1]: added new command-line option
	"--internal" that can be used to let glib-genmarshal generate
	internal functions using the G_GNUC_INTERNAL attribute (bug #346647).

Wed Aug 16 13:55:08 2006  Tim Janik  <timj@imendio.com>

	* gobject.c: conditionally thaw the notify queue after construction,
	so we don't trigger warnings when trying to thaw an unfrozen singleton.

2006-08-15  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.2 ===

2006-08-05  Matthias Clasen  <mclasen@redhat.com>

	* gparamspecs.c (g_param_spec_types_init): Don't initialize
	struct members with function calls.  (#349952)

2006-07-22  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.1 ===

2006-07-21  Matthias Clasen  <mclasen@redhat.com>

	* gtypemodule.c (g_type_module_register_type): Copy the complete
	value table, not just the first 4 bytes.  (#348136, Coverity)

2006-07-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.0 ===

2006-06-20  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.11.4 ===

2006-06-15  Federico Mena Quintero  <federico@novell.com>

	* gtype.c (g_type_instance_get_private): Fix the error message so
	that it mentions the right functions:
	"g_type_instance_get_private() requires a prior call to
	g_type_class_add_private()".

2006-06-12  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.11.3 ===

2006-06-05  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.11.2 ===

2006-06-02  Behdad Esfahbod  <behdad@gnome.org>

	* gobject/genum.h: Make value_name and value_nick const in structs
	_GEnumValue and _GFlagValue.  (#317793)

Tue May 16 14:01:43 2006  Tim Janik  <timj@imendio.com>
